# Shopify-Scout

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  bot.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  ai_advisor.py  analyzer.py  cli.py  cli_inventory.py  comparator.py  config.py  exporter.py  inventory_monitor.py  inventory_tracker.py  monitor.py  niche_analyzer.py  price_optimizer.py  price_tracker.py  pricing_intel.py  report_generator.py  scraper.py  seo_analyzer.py  social_proof.py  tech_detector.py  telegram_bot.py  traffic_estimator.py  trend_detector.py
reports/batch/: summary.json  test_myshopify_com.json
tests/: test_analyzer.py  test_cli.py  test_comparator.py  test_exporter.py  test_inventory_monitor.py  test_inventory_tracker.py  test_monitor.py  test_niche_analyzer.py  test_price_optimizer.py  test_price_tracker.py  test_pricing_intel.py  test_report_generator.py  test_scraper.py  test_seo_analyzer.py  test_social_proof.py  test_tech_detector.py  test_traffic_estimator.py  test_trend_detector.py
